Revision history for Perl module Perl-Dist

1.05 Thu  9 Oct 2008
	- Reorganising the test script order
	- Added separate 5.8.8 and 5.10.0 test scripts
	- Added a full test of Vanilla ->run
	- Removing force flags for stuff that now works
	- Adding a new Template-Toolkit-based patch system
	- Unified the toolchain install methods

1.04 Wed 23 Jul 2008
	- This release co-incides with Strawberry August 2008
	- Tweak to allow libwww-perl to build behind a proxy
	- Add a temporary bug-fix/patch for MM_Win32.pm
	- Add a workaround for Data::Compare failing on Win32
	- Adding Math::Pari to the default build

1.03 Tue 22 Jul 2008
	- Minor cleanups to support the July Strawberry release

1.02 Tue 15 Jul 2008
	- Updating to a Vista-capable mingw.
	- Adding install_pari for Math::Pari support

1.01 Tue 15 Apr 2008
	- Refactored a bit to use install_modules
	- Promoting some internals to public methods

1.00 Mon  7 Apr 2008
	- Release to match Strawberry Perl 5.10.0.1 April 2008

0.90_04 Mon 24 Mar 2008
	- Adding Perl::Dist::Inno::System for [Run] and [UninstallRun]
	  block support.
	  This is needed for more sophisticated install and uninstall
	  functionality.
	- Completing documentation for all the major install_foo methods.
	- Merging some idiosyncracies into the Perl::Dist::Inno core.
	- Converting force in install_module to use notest under the covers,
	  so that there are no errors to propogate upwards.
	- Added support for generating both zip and exe files simultaneously.

0.90_03 Fri  4 Jan 2008
	- Perl::Dist::Download was a bad idea, I wanted the ability to
	  to build distribution from a minicpan mirror, but maintaining
	  that package and incrementing it every time a minor release
	  happens of an upstream package will become a nightmare.
	- Merged in PAR support from Perl-Dist-Glutamate (Steffen Muller)
	- Adding more documentation
	- Completed first implementation of Perl::Dist::Machine, for
	  generating multiple variations of a dist at the same time.