@@ -7,6 +7,7 @@ Revision history for Perl module Perl-Dist
 	- Removing force flags for stuff that now works
 	- Adding a new Template-Toolkit-based patch system
 	- Unified the toolchain install methods
+	- Set the environment correctly when installing CPAN modules
 
 1.04 Wed 23 Jul 2008
 	- This release co-incides with Strawberry August 2008
